--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "@tailwindcss/vite": "^4.0.6",
     "phaser": "^3.88.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
