--- a/package.json
+++ b/package.json
@@ -3,5 +3,15 @@
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
     "husky": "^9.1.7"
+  },
+  
+  "scripts": {
+    "start": "cd client && npm start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "dependencies": {
+    "react-scripts": "^5.0.1"
   }
 }
