--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.1.5"
+    "react-router-dom": "^7.1.5",
+    "simple-peer": "^9.11.1",
+    "socket.io-client": "^4.8.1",
+    "react-player": "^2.16.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
