--- a/client/package.json
+++ b/client/package.json
@@ -11,15 +11,16 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
+    "@zegocloud/zego-uikit-prebuilt": "^2.14.1",
     "axios": "^1.7.9",
     "phaser": "^3.88.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-player": "^2.16.0",
     "react-router-dom": "^7.1.5",
     "simple-peer": "^9.11.1",
-    "socket.io-client": "^4.8.1",
-    "react-player": "^2.16.0"
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
