--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.0.6",
     "@zegocloud/zego-uikit-prebuilt": "^2.14.1",
     "axios": "^1.7.9",
+    "lucide-react": "^0.476.0",
     "phaser": "^3.88.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
