--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "@tailwindcss/vite": "^4.0.6",
     "@zegocloud/zego-uikit-prebuilt": "^2.14.1",
-    "axios": "^1.7.9",
+    "axios": "^1.8.1",
     "lucide-react": "^0.476.0",
     "phaser": "^3.88.0",
     "react": "^18.3.1",
+    "react-auth-google": "^1.0.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-player": "^2.16.0",
